Graph problems added